--- a/fm/src/app/educational/educational.component.scss
+++ b/fm/src/app/educational/educational.component.scss
@@ -70,3 +70,11 @@ h5{
 .add h5 i {
   margin-right: 8px;
 }
+.btns-general{
+  background-color: #000000;
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  float: right;
+  margin-right: 150px;
+}
