--- a/fm/src/app/general/general.component.scss
+++ b/fm/src/app/general/general.component.scss
@@ -101,5 +101,6 @@ th {
   background-color: #000000;
   color: white;
   border-radius: 5px;
-  float: left;
+  float: right;
+  margin-right: 150px;
 }
