--- a/fm/src/app/more-options/onboarding/onboarding.component.scss
+++ b/fm/src/app/more-options/onboarding/onboarding.component.scss
@@ -1,25 +1,85 @@
-th{
-  background-color:#ebebeb;
-  padding: 10px;
-}
-
-.btn-filter{
+.navbar {
   display: flex;
-  justify-content: space-between;
-  margin-top: 2rem;
+  flex-direction: row;
+  justify-content: flex-start;
+  list-style:none ;
+  background-color: #2e3b61;
+  padding: 0.5rem 1rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-size: cover;
 }
 
-.header{
-  height: 3rem;
+.nav-item {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  color: #f9f9f9;
+  font-weight: bold;
+  position: relative;
+  transition: color 0.3s, background-color 0.3s;
+  border-radius: 10px;
 }
+
+.nav-item::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0088ff;
+  transition: width 0.3s;
+}
+
+.nav-item:hover::after {
+  width: 100%;
+}
+
+.nav-item.active {
+  background-color: #f1f1f1;
+  color: #1e3c72;
+}
+
+.nav-item.active::after {
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem;
+  }
+
+  .nav-item {
+    padding: 0.5rem 1rem;
+    width: 100%;
+  }
+}
+
 .breadcrumb {
   display: flex;
   flex-direction: row;
-   color: #f1f1f1;
   justify-content: flex-start;
   background: linear-gradient(90deg, #1e3c72, #2a5298);
   padding: 0.5rem 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-size: cover;
-  font-weight: 600;
+}
+
+.breadcrumb-item {
+  cursor: pointer;
+  color: #f9f9f9;
+  font-weight: bold;
+  position: relative;
+}
+
+
+
+.scrollable-content {
+  overflow-y: scroll;
+  max-width: 100vw;
+  max-height: 75vh;
+  overflow-x: hidden;
+  padding: 10px;
+  border: 1px solid #ddd;
 }
