--- a/fm/src/app/operation/operation.component.html
+++ b/fm/src/app/operation/operation.component.html
@@ -43,7 +43,7 @@
   
         <!-- Operations List -->
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center leave-item">
+          <a href="src/app/leave-summary/leave-summary.component.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center leave-item">
             <div class="d-flex align-items-center">
               <i class="fa-solid fa-umbrella-beach fa-flip-horizontal me-3"></i>
               Leave Tracker
