--- a/fm/src/app/skillset/skillset.component.scss
+++ b/fm/src/app/skillset/skillset.component.scss
@@ -65,3 +65,11 @@ th {
 .table-page {
   width: 91vw;
 }
+
+.btns-general{
+  background-color: #000000;
+  color: white;
+  border-radius: 5px;
+  float: right;
+  margin-right: 150px;
+}
