--- a/fm/src/app/team-list/team-list.component.html
+++ b/fm/src/app/team-list/team-list.component.html
@@ -1,1 +1,15 @@
-<p>team-list works!</p>
+<div>
+    <header class="top-bar">
+      <div class="buttons">
+        <button mat-icon-button class="icon-button" aria-label="Details">
+          <mat-icon>add</mat-icon>
+        </button>
+        <button mat-icon-button class="icon-button" aria-label="Filter">
+          <mat-icon>filter_list</mat-icon>
+        </button>
+        <button mat-icon-button class="icon-button" aria-label="Search">
+          <mat-icon>search</mat-icon>
+        </button>
+      </div>
+    </header>
+  </div>
