--- a/fm/src/app/educational/educational.component.html
+++ b/fm/src/app/educational/educational.component.html
@@ -1,77 +1,84 @@
-
 <div class="education-page">
-  <h2 class="header" ><i class="fa-solid fa-graduation-cap "></i>Educational Details</h2>
+  <h2 class="header">
+    <i class="fa-solid fa-graduation-cap"></i>Educational Details
+  </h2>
   <div class="add">
-  <h5><i class="fa-solid fa-plus btn"  (click)="addedClick()"></i>Add</h5>
+    <h5>
+      <i class="fa-solid fa-plus btn" (click)="addRow()"></i>Add
+    </h5>
   </div>
-    <form [formGroup]="educationGroup">
-      <div class="row mt-5">
+  <form [formGroup]="educationGroup">
+    <div formArrayName="educationArray">
+      <div class="row mt-5" *ngFor="let eduGroup of educationArray.controls; let i = index" [formGroupName]="i">
         <div class="col-md-5">
           <div class="form-group div-spacing">
             <label class="label-spacing" for="coursePursued">Course Pursued<span>*</span></label>
-            <select class="form-select"   formControlName="coursePursued"
-            [ngClass]="{'invalid-input': coursePursued?.invalid && (coursePursued?.dirty || coursePursued?.touched)}">
-            <option value="" disabled selected>Select a Designation</option>
+            <select class="form-select" formControlName="coursePursued" [ngClass]="{'invalid-input': eduGroup.get('coursePursued')?.invalid && (eduGroup.get('coursePursued')?.dirty || eduGroup.get('coursePursued')?.touched)}">
+              <option value="" disabled selected>Select a Designation</option>
               <option>Option-1</option>
               <option>Option-2</option>
               <option>Option-3</option>
             </select>
-            <div *ngIf="coursePursued?.invalid && (coursePursued?.dirty || coursePursued?.touched)" class="text-danger">
+            <div *ngIf="eduGroup.get('coursePursued')?.invalid && (eduGroup.get('coursePursued')?.dirty || eduGroup.get('coursePursued')?.touched)" class="text-danger">
               Course Pursued is required.
             </div>
           </div>
-  
         </div>
+
         <div class="col-md-5">
           <div class="form-group div-spacing">
             <label class="label-spacing" for="institutionName">Name of the College/Institution<span>*</span></label>
-            <input   type="text" class="form-control" id="institutionName" placeholder="Name of the College/Institution" formControlName="institutionName"
-            [ngClass]="{'invalid-input': institutionName?.invalid && (institutionName?.dirty || institutionName?.touched)}">
-            <div *ngIf="institutionName?.invalid && (institutionName?.dirty || institutionName?.touched)" class="text-danger">
+            <input type="text" class="form-control" id="institutionName" placeholder="Name of the College/Institution" formControlName="institutionName" [ngClass]="{'invalid-input': eduGroup.get('institutionName')?.invalid && (eduGroup.get('institutionName')?.dirty || eduGroup.get('institutionName')?.touched)}">
+            <div *ngIf="eduGroup.get('institutionName')?.invalid && (eduGroup.get('institutionName')?.dirty || eduGroup.get('institutionName')?.touched)" class="text-danger">
               Institution Name is required.
             </div>
           </div>
         </div>
+
         <div class="col-md-5">
           <div class="d-flex div-spacing">
             <div class="me-3 flex-grow-1">
-              <div class="form-group ">
-                <label class="label-spacing" for="durationFrom">Duration<span>*</span></label>
-                <input type="text" class="form-control" id="durationFrom" placeholder="From" formControlName="durationFrom"
-                [ngClass]="{'invalid-input': durationFrom?.invalid && (durationFrom?.dirty || durationFrom?.touched)}">
-  
-                <div *ngIf="durationFrom?.invalid && (durationFrom?.dirty || durationFrom?.touched)" class="text-danger">
+              <div class="form-group">
+                <label class="label-spacing" for="durationFrom">Duration From<span>*</span></label>
+                <input type="text" class="form-control" id="durationFrom" placeholder="From" formControlName="durationFrom" [ngClass]="{'invalid-input': eduGroup.get('durationFrom')?.invalid && (eduGroup.get('durationFrom')?.dirty || eduGroup.get('durationFrom')?.touched)}">
+                <div *ngIf="eduGroup.get('durationFrom')?.invalid && (eduGroup.get('durationFrom')?.dirty || eduGroup.get('durationFrom')?.touched)" class="text-danger">
                   Duration From is required.
                 </div>
               </div>
             </div>
-            <div class="flex-grow-1 ">
-              <div class="form-group  ">
+
+            <div class="flex-grow-1">
+              <div class="form-group">
                 <label for="durationTo" class="invisible label-spacing">To</label>
-                <input  type="text" class="form-control" id="durationTo" placeholder="To" formControlName="durationTo"
-                [ngClass]="{'invalid-input': durationTo?.invalid && (durationTo?.dirty || durationTo?.touched)}">
-                <div *ngIf="durationTo?.invalid && (durationTo?.dirty || durationTo?.touched)" class="text-danger">
+                <input type="text" class="form-control" id="durationTo" placeholder="To" formControlName="durationTo" [ngClass]="{'invalid-input': eduGroup.get('durationTo')?.invalid && (eduGroup.get('durationTo')?.dirty || eduGroup.get('durationTo')?.touched)}">
+                <div *ngIf="eduGroup.get('durationTo')?.invalid && (eduGroup.get('durationTo')?.dirty || eduGroup.get('durationTo')?.touched)" class="text-danger">
                   Duration To is required.
                 </div>
               </div>
             </div>
           </div>
-  
-  
         </div>
+
         <div class="col-md-5">
-  
-  <div class="form-group div-spacing">
-    <label class="label-spacing" for="cgpaObtained">CGPA Obtained<span>*</span></label>
-    <input type="text" class="form-control" id="cgpaObtained" placeholder="CGPA obtained" formControlName="cgpaObtained"
-    [ngClass]="{'invalid-input': cgpaObtained?.invalid && (cgpaObtained?.dirty || cgpaObtained?.touched)}">
-    <div *ngIf="cgpaObtained?.invalid && (cgpaObtained?.dirty || cgpaObtained?.touched)" class="text-danger">
-      CGPA Obtained Name is required.
-    </div>
-  </div>
+          <div class="form-group div-spacing">
+            <label class="label-spacing" for="cgpaObtained">CGPA Obtained<span>*</span></label>
+            <input type="text" class="form-control" id="cgpaObtained" placeholder="CGPA obtained" formControlName="cgpaObtained" [ngClass]="{'invalid-input': eduGroup.get('cgpaObtained')?.invalid && (eduGroup.get('cgpaObtained')?.dirty || eduGroup.get('cgpaObtained')?.touched)}">
+            <div *ngIf="eduGroup.get('cgpaObtained')?.invalid && (eduGroup.get('cgpaObtained')?.dirty || eduGroup.get('cgpaObtained')?.touched)" class="text-danger">
+              CGPA Obtained is required.
+            </div>
+          </div>
         </div>
-  
+
+        <div class="col-md-1 d-flex align-items-center">
+          <button type="button" class="btn btn-danger" (click)="removeRow(i)">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </div>
       </div>
-    </form>
+    </div>
+  </form>
+
+  <div>
+    <button class="btns-general" (click)="saveClick()">Save</button>
   </div>
-  
+</div>
