--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -1,21 +1,23 @@
-<app-login *ngIf="!isLoggedIn" (loginSuccess)="handleLoginSuccess()"></app-login>
+<!-- LOGIN PAGE -->
+<div *ngIf="!showLayout">
+  <app-login (loginSuccess)="handleLoginSuccess()"></app-login>
+</div>
 
-<div class="app-container" *ngIf="isLoggedIn">
+<!-- MAIN LAYOUT -->
+<div *ngIf="showLayout" class="app-container">
+
+  <!-- Sidebar -->
   <div class="sidebar" [ngClass]="{ expanded: isExpanded }">
     <div class="header" (click)="navigateTo('home', 'new-Home')">
       <img src="../assets/images/TVM Infotech Logo.jpg" alt="Logo" />
     </div>
 
     <div class="menu">
-      <div
-        class="content"
-        *ngFor="let item of menuItems"
-      >
-        <div
-          class="link"
-          (click)="navigateTo(item.link, item.path)"
-          [ngClass]="{ 'active': activeLink === item.link }"
-        >
+      <div class="content" *ngFor="let item of menuItems">
+        <div class="link"
+             (click)="navigateTo(item.link, item.path)"
+             [ngClass]="{ 'active': activeLink === item.link }">
+
           <i [class]="item.icon"></i>
           <div class="title-home">{{ item.title }}</div>
         </div>
@@ -23,6 +25,7 @@
     </div>
   </div>
 
+  <!-- Main Router Outlet -->
   <div class="main-content" style="width: 100%">
     <router-outlet></router-outlet>
   </div>
