--- a/fm/src/app/home-my-data/home-my-data.component.html
+++ b/fm/src/app/home-my-data/home-my-data.component.html
@@ -1,11 +1,12 @@
-<nav class="navbar">
-  <div class="nav-item" [class.active]="activeNavItem === 'overview'" (click)="navigateToOverview()">Overview</div>
-  <div class="nav-item" [class.active]="activeNavItem === 'dashboard'" (click)="navigateToDashboard()">Dashboard</div>
-  <div class="nav-item" [class.active]="activeNavItem === 'calendar'" (click)="navigateToCalendar()">Calendar</div>
-</nav>
+<!-- <nav class="navbar"> -->
+  <!-- <div class="nav-item" [class.active]="activeNavItem === 'overview'" (click)="navigateToOverview()">Overview</div> -->
+  <!-- <div class="nav-item" [class.active]="activeNavItem === 'dashboard'" (click)="navigateToDashboard()">Dashboard</div> -->
+  <!-- <div class="nav-item" [class.active]="activeNavItem === 'calendar'" (click)="navigateToCalendar()">Calendar</div> -->
+<!-- </nav> -->
 
-<div class="main-content">
-  <app-overview *ngIf="activeNavItem === 'overview'"></app-overview>
-  <app-dashboard *ngIf="activeNavItem === 'dashboard'"></app-dashboard>
-  <app-calendar *ngIf="activeNavItem === 'calendar'"></app-calendar>
-</div>
+<!-- <div class="main-content"> -->
+  <!-- <app-overview *ngIf="activeNavItem === 'overview'"></app-overview> -->
+  <!-- <app-dashboard *ngIf="activeNavItem === 'dashboard'"></app-dashboard> -->
+  <!-- <app-calendar *ngIf="activeNavItem === 'calendar'"></app-calendar> -->
+<!-- </div> -->
+ <app-overview *ngIf="activeNavItem === 'overview'"></app-overview>
