--- a/fm/src/app/new-home/new-home.component.html
+++ b/fm/src/app/new-home/new-home.component.html
@@ -1,11 +1,11 @@
 <!-- Breadcrumb -->
-<nav class="">
+<!-- <nav class="">
   <div class="content rgb-animate">
   <span class="" *ngIf="activeNavItem === 'my-space'">New Home > My Space > {{ activeSubNavItem }}</span>
   <span class="" *ngIf="activeNavItem === 'teams-dashboard'">New Home > Teams > {{ activeSubNavItem }}</span>
   <span class="" *ngIf="activeNavItem === 'organization'">New Home > Organization > {{ activeSubNavItem }}</span>
 </div>
-</nav>
+</nav> -->
 
 <!-- Navbar -->
 <nav class="navbar">
