--- a/fm/src/app/new-home/new-home.component.scss
+++ b/fm/src/app/new-home/new-home.component.scss
@@ -134,17 +134,17 @@ background-size: cover;
 }
 
 .content:last-child {
-	background: #de6161;
-	background: -webkit-linear-gradient(
-		to right bottom,
-		#2657eb,
-		#de6161
-	); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(
-		to right bottom,
-		#2657eb,
-		#de6161
-	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	// background: #de6161;
+	// background: -webkit-linear-gradient(
+	// 	to right bottom,
+	// 	#2657eb,
+	// 	#de6161
+	// ); 
+	// background: linear-gradient(
+	// 	to right bottom,
+	// 	#2657eb,
+	// 	#de6161
+	// ); 
 }
 
 a {
