--- a/fm/src/app/team-project/team-project.component.scss
+++ b/fm/src/app/team-project/team-project.component.scss
@@ -275,3 +275,22 @@ button:hover {
   
 }
   
+
+
+.project-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+
+  h2 {
+    font-weight: 600;
+    color: #333;
+  }
+}
+
+nz-table {
+  background: #fff;
+  border-radius: 10px;
+  padding: 15px;
+}
