--- a/fm/src/app/teams-dashboard/teams-dashboard.component.html
+++ b/fm/src/app/teams-dashboard/teams-dashboard.component.html
@@ -8,8 +8,8 @@
   <router-outlet></router-outlet> -->
 
   <nav class="navbar">
-    <div class="nav-item" [class.active]="activeNavItem === 'team-space'" (click)="navigateToMySpace()">Team Space</div>
-    <div class="nav-item" [class.active]="activeNavItem === 'team-reportees'" (click)="navigateToReportees()">Reportees</div>
+    <!-- <div class="nav-item" [class.active]="activeNavItem === 'team-space'" (click)="navigateToMySpace()">Team Space</div> -->
+    <!-- <div class="nav-item" [class.active]="activeNavItem === 'team-reportees'" (click)="navigateToReportees()">Reportees</div> -->
     <div class="nav-item" [class.active]="activeNavItem === 'department'" (click)="navigateToDepartment()">Department</div>
     <div class="nav-item" [class.active]="activeNavItem === 'projects'" (click)="navigateToProjects()">Projects</div>
     <div class="nav-item" [class.active]="activeNavItem === 'team-list'" (click)="navigateToTeamList()">Team List</div>
@@ -17,8 +17,8 @@
   
 
   <div class="main-content">
-    <app-teams-space *ngIf="activeNavItem === 'team-space'"></app-teams-space>
-    <app-team-reportees *ngIf="activeNavItem === 'team-reportees'"></app-team-reportees>
+    <!-- <app-teams-space *ngIf="activeNavItem === 'team-space'"></app-teams-space> -->
+    <!-- <app-team-reportees *ngIf="activeNavItem === 'team-reportees'"></app-team-reportees> -->
     <app-team-department *ngIf="activeNavItem === 'department'"></app-team-department>
     <app-team-project *ngIf="activeNavItem === 'projects'"></app-team-project>
     <app-team-list *ngIf="activeNavItem === 'team-list'"></app-team-list>
