--- a/fm/src/app/time-sheet/time-sheet.component.html
+++ b/fm/src/app/time-sheet/time-sheet.component.html
@@ -55,7 +55,7 @@
           </thead>
           <tbody>
             <tr *ngFor="let entry of timesheetSummary">
-              <td>{{timesheet?.employeeName}}</td>
+              <td>{{timesheet.employeeName}}</td>
               <td>{{ entry.project }}</td>
               <td>{{ entry.location }}</td>
               <td>{{ entry.hrsType }}</td>
