--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -1,124 +1,117 @@
-<div class="head-image">
-<img  src="../../assets/images/earth12.jpg">
-</div>
-<div class="overview-page">
-  <div class="row">
-    <div class="col-4">
-      <div class="card">
-        <div class="card-body d-flex justify-content-center align-items-center" style="height: 9rem">
-          <span class="profile-set">
-            <i class="fa-solid fa-user profile"></i>
-          </span>
-        </div>
-        <div class="profile-detail">
-          <h5>1 - Arul</h5> 
-          <h5>CEO</h5>
-        </div>
+
+
+<div class="row mt-4">
+
+  <!-- LEFT SIDE: CEO Profile -->
+ <div class="col-md-4 col-sm-12 mb-3">
+  <div class="card h-100">
+    <div class="card-body d-flex justify-content-center align-items-center" style="height: 9rem">
+      
+      <!-- Avatar with first letter -->
+      <div class="avatar-circle">
+        <span class="initials">A</span>
       </div>
+
     </div>
-    <div class="col-8">
-      <div class="card">
-        <div class="card-body">
-          <div class="card-title">
-            <div class="d-flex tabs">
-              <ul class="custom-list">
-                <li
-                  (click)="aditionalClick('activities')"
-                  [ngClass]="{ active: selectedTab === 'activities' }"
-                >
-                  Activities
-                </li>
-                <li
-                  (click)="aditionalClick('feeds')"
-                  [ngClass]="{ active: selectedTab === 'feeds' }"
-                >
-                  Feeds
-                </li>
-                <li
-                  (click)="aditionalClick('profile')"
-                  [ngClass]="{ active: selectedTab === 'profile' }"
-                >
-                  Profile
-                </li>
-                <li
-                  (click)="aditionalClick('approvals')"
-                  [ngClass]="{ active: selectedTab === 'approvals' }"
-                >
-                  Approvals
-                </li>
-                <li
-                  (click)="aditionalClick('leave')"
-                  [ngClass]="{ active: selectedTab === 'leave' }"
-                >
-                  Leave
-                </li>
-                <li
-                  (click)="aditionalClick('shift')"
-                  [ngClass]="{ active: selectedTab === 'shift' }"
-                >
-                  Shift
-                </li>
-                <li
-                  (click)="aditionalClick('files')"
-                  [ngClass]="{ active: selectedTab === 'files' }"
-                >
-                  Files
-                </li>
-                <li
-                  (click)="aditionalClick('more')"
-                  [ngClass]="{ active: selectedTab === 'more' }"
-                  data-bs-toggle="tooltip"
-                  data-bs-placement="bottom"
-                  title="More"
-                >
-                  <i class="fa-solid fa-ellipsis"></i>
-                </li>
-                <li
-                  (click)="aditionalClick('custom-tabs')"
-                  [ngClass]="{ active: selectedTab === 'custom-tabs' }"
-                  data-bs-toggle="tooltip"
-                  data-bs-placement="bottom"
-                  title="Customize"
-                >
-                  <i class="fa-solid fa-outdent" ></i>
-                </li>
-              </ul>
-            </div>
+
+    <div class="profile-detail text-center pb-3">
+      <h5>Arul Subaramaniyam</h5>
+      <h6 class="text-muted">CEO</h6>
+    </div>
+  </div>
+</div>
+
+
+  <!-- RIGHT SIDE: CEO DASHBOARD CARDS -->
+  <div class="col-md-8 col-sm-12">
+
+    <div class="row ceo-dashboard">
+
+      <!-- Total Employees -->
+      <div class="col-lg-3 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>Total Employees</h6>
+            <h2>{{ totalEmployees || 0 }}</h2>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
-
-  <div class="row mt-4">
-    <div class="col-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Department Members</h5>
-          <p>No Data Found</p>
+      <!-- Employees Present Today -->
+      <div class="col-lg-3 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>Employees Present Today</h6>
+            <h2>{{ presentToday || 0 }}</h2>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-8">
-      <div class="card card-items" style="margin-top: -5rem">
-        <div class="card-body " *ngIf="selectedTab === 'activities'">
-          <h5 class="card-title">Good Morning</h5>
-          <p>Arul</p>
-          <p>Have a productive day!</p>
-          <p>
-            "If you want to make a permanent change, stop focusing on the size
-            of your problems and start focusing on the size of you!" - T. Harv
-            Eker
-          </p>
+
+      <!-- Employees Absent Today -->
+      <div class="col-lg-3 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>Employees Absent Today</h6>
+            <h2>{{ absentToday || 0 }}</h2>
+          </div>
         </div>
-        <div class="card-body" *ngIf="selectedTab === 'feeds'">1</div>
-        <div class="card-body" *ngIf="selectedTab === 'profile'">2</div>
-        <app-approval-leave-request class="card-body" *ngIf="selectedTab === 'approvals'">3</app-approval-leave-request>
-        <app-leave-balance *ngIf="selectedTab === 'leave'"></app-leave-balance>
-        <div class="card-body" *ngIf="selectedTab === 'shift'">5</div>
-        <div class="card-body" *ngIf="selectedTab === 'files'">6</div>
       </div>
+
+      <!-- Employees on Leave Today -->
+      <div class="col-lg-3 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>Employees on Leave request </h6>
+            <h2>{{ leaveToday || 0 }}</h2>
+          </div>
+        </div>
+      </div>
+
+      <!-- New Joinees -->
+      <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>New Joinees This Month</h6>
+            <h2>{{ newJoinees || 0 }}</h2>
+          </div>
+        </div>
+      </div>
+      <!-- Departments -->
+      <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>Active Departments</h6>
+            <h2>{{ departmentCount || 0 }}</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>Project Count</h6>
+            <h2>{{ departmentCount || 0 }}</h2>
+          </div>
+        </div>
+      </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>Employee Anniversery</h6>
+            <h2>{{ departmentCount || 0 }}</h2>
+          </div>
+        </div>
+      </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
+        <div class="card stat-card h-100">
+          <div class="card-body">
+            <h6>employee bithday</h6>
+            <h2>{{ departmentCount || 0 }}</h2>
+          </div>
+        </div>
+      </div>
+
     </div>
+
   </div>
+
 </div>
